--- a/eBook/04.2.md
+++ b/eBook/04.2.md
@@ -77,7 +77,7 @@ import (
 import ("fmt"; "os")
 ```
 
-當你導入多個包時，導入的順序會按照字母排序。
+當你導入多個套件時，導入的順序會按照字母排序。
 
 如果套件名不是以 `.` 或 `/` 開頭，如 `"fmt"` 或者 `"container/list"`，則 Go 會在全局文件進行查找；如果套件名以 `./` 開頭，則 Go 會在相對目錄中查找；如果套件名以 `/` 開頭（在 Windows 下也可以這樣使用），則會在系統的絕對路徑中查找。
 
