--- a/eBook/09.0.md
+++ b/eBook/09.0.md
@@ -1,9 +1,10 @@
-# 9.0 包（package）
+# 9.0 套件（package）
 
-本章主要針對 Go 語言的包展開講解。
+本章主要針對 Go 語言的套件展開講解。
 
 ## 鏈接
 
-- [目錄](directory.md)
-- 上一章：[將 map 的鍵值對調](08.6.md)
-- 下一節：[標準庫概述](09.1.md)
+* [目錄](directory.md)
+* 上一章：[將 map 的鍵值對調](08.6.md)
+* 下一節：[標準庫概述](09.1.md)
+
