--- a/eBook/09.10.md
+++ b/eBook/09.10.md
@@ -1,21 +1,21 @@
-# 9.10 Go 的外部包和項目
+# 9.10 Go 的外部套件和項目
 
-現在我們知道如何使用 Go 以及它的標準庫了，但是 Go 的生態要比這大的多。當着手自己的 Go 項目時，最好先查找下是否有些存在的第三方的包或者項目不能使用。大多數可以通過 go install 來進行安裝。
+現在我們知道如何使用 Go 以及它的標準庫了，但是 Go 的生態要比這大的多。當着手自己的 Go 項目時，最好先查找下是否有些存在的第三方的套件或者項目不能使用。大多數可以通過 go install 來進行安裝。
 
-[Go Walker][https://gowalker.org] 支持根據包名在海量數據中查詢。
+\[Go Walker\]\[[https:\/\/gowalker.org](https://gowalker.org)\] 支持根據包名在海量數據中查詢。
 
 目前已經有許多非常好的外部庫，如：
 
-- MySQL(GoMySQL), PostgreSQL(go-pgsql), MongoDB (mgo, gomongo), CouchDB (couch-go), ODBC (godbcl), Redis (redis.go) and SQLite3 (gosqlite) database drivers
-- SDL bindings
-- Google's Protocal Buffers(goprotobuf)
-- XML-RPC(go-xmlrpc)
-- Twitter(twitterstream)
-- OAuth libraries(GoAuth)
-	
+* MySQL\(GoMySQL\), PostgreSQL\(go-pgsql\), MongoDB \(mgo, gomongo\), CouchDB \(couch-go\), ODBC \(godbcl\), Redis \(redis.go\) and SQLite3 \(gosqlite\) database drivers
+* SDL bindings
+* Google's Protocal Buffers\(goprotobuf\)
+* XML-RPC\(go-xmlrpc\)
+* Twitter\(twitterstream\)
+* OAuth libraries\(GoAuth\)
+
 ## 鏈接
 
-- [目錄](directory.md)
-- 上一節：[通過 git 打包和安裝](09.9.md)
-- 下一節：[在 Go 程序中使用外部庫](09.11.md)
-	
+* [目錄](directory.md)
+* 上一節：[通過 git 打包和安裝](09.9.md)
+* 下一節：[在 Go 程序中使用外部庫](09.11.md)
+
